--- a/README.html
+++ b/README.html
@@ -63,7 +63,7 @@ See the end of the file for license conditions.
 See license.txt for mirage335KernelBuild license conditions.
 
 
-Assistance for ensuring reasonably correct Linux kernel configuration and building of kernels.
+Assistance for ensuring reasonably correct Linux kernel configuration and building.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
 _t '
@@ -77,26 +77,24 @@ if false; then true; # -->
 <!-- # --><h1>Usage</h1>
 <!--
 fi
- '_paragraph_begin'
-if false; then true; # -->
-<!-- # --><p>
-<!--
-fi
- '_o' '_messagePlain_probe' './ubiquitous_bash.sh'
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Copy &#39;.config&#39; files to &#39; "$scriptLib"/linux/lts/.config &#39; or similar.
+
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+ '_o' '_messagePlain_probe' './_fetchKernel'
 if false; then true; # -->
 <!-- # --><pre style="-webkit-print-color-adjust: exact;background-color:#848484;margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
-<!-- # --><span style="color:#1818b2;background-color:#848484;"> ./ubiquitous_bash.sh</span>
+<!-- # --><span style="color:#1818b2;background-color:#848484;"> ./_fetchKernel</span>
 <!-- # --></pre>
 <!--
 fi
- '_paragraph_end'
+ '_o' '_messagePlain_probe' './_build'
 if false; then true; # -->
-<!-- # --></p>
-<!--
-fi
- '_paragraph_begin'
-if false; then true; # -->
-<!-- # --><p>
+<!-- # --><pre style="-webkit-print-color-adjust: exact;background-color:#848484;margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+<!-- # --><span style="color:#1818b2;background-color:#848484;"> ./_build</span>
+<!-- # --></pre>
 <!--
 fi
 _t '
@@ -105,11 +103,7 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_page'
-if false; then true; # -->
-<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
-<!--
-fi
+ '_' '_page'
  '_heading1' 'Design'
 if false; then true; # -->
 <!-- # --><h1>Design</h1>
@@ -125,11 +119,7 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_page'
-if false; then true; # -->
-<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
-<!--
-fi
+ '_' '_page'
  '_heading1' 'Safety'
 if false; then true; # -->
 <!-- # --><h1>Safety</h1>
@@ -146,19 +136,10 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_page'
-if false; then true; # -->
-<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
-<!--
-fi
+ '_' '_page'
  '_heading1' 'Reference'
 if false; then true; # -->
 <!-- # --><h1>Reference</h1>
-<!--
-fi
- '_paragraph_begin'
-if false; then true; # -->
-<!-- # --><p>
 <!--
 fi
 _t '
@@ -168,30 +149,16 @@ https://en.wikipedia.org/wiki/Menuconfig
 		Maybe not so much anymore.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_paragraph_end'
-if false; then true; # -->
-<!-- # --></p>
-<!--
-fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 
 
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_page'
-if false; then true; # -->
-<!-- # --><div style="page-break-before: always;margin: 0;padding: 0; border-width: 0px;"> </div>
-<!--
-fi
+ '_' '_page'
  '_heading1' 'Copyright'
 if false; then true; # -->
 <!-- # --><h1>Copyright</h1>
-<!--
-fi
- '_paragraph_begin'
-if false; then true; # -->
-<!-- # --><p>
 <!--
 fi
 _t '
@@ -212,11 +179,6 @@ You should have received a copy of the GNU General Public License
 along with mirage335KernelBuild.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
- '_paragraph_end'
-if false; then true; # -->
-<!-- # --></p>
-<!--
-fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 
