--- a/_lib/linux/mainline/statement_presentation.html
+++ b/_lib/linux/mainline/statement_presentation.html
@@ -87,6 +87,7 @@ if false; then true; # -->
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    Y: CPU_FREQ_DEFAULT_GOV_ONDEMAND</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> hazard: CONFIG_PREEMPT: CONFIG_PREEMPT=y</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> hazard: CONFIG_PREEMPT_RT: </span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     N: CONFIG_DEBUG_NOTIFIERS</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: memory</span>
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    Y: CONFIG_FRONTSWAP</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: integration</span>
