--- a/README.html
+++ b/README.html
@@ -198,6 +198,8 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 Both the LTS and Mainline kernels may be configured as such. Beware the upstream dist/OS package should be for as recent a kernel as possible (to correctly enable drivers for newer hardware), but NEVER newer than the kernel to configure (as &#39;make oldconfig&#39; obviously may not correctly backport differently named kernel symbols to a previous kernel version config). Reports from _kernelConfig functions are strong but not absolute recommendations (eg. some messages may be precautionary references to obsolete kernel symbol names in case these are ever seen again).
 
 For the &#39;server&#39; config, minimizing the effect of any future or unknown vulnerabilities, especially for kernel network drivers, &#39;BadUSB&#39;/SDIO, etc, is most important.
+
+Upstream changes to &#39;_kernelConfig&#39; report functions, once compiled in, will affect &#39;statement.sh&#39; files, which can be used to quickly obtain and git diff new reports.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_' '_page'
