--- a/_lib/linux/lts/statement_presentation.html
+++ b/_lib/linux/lts/statement_presentation.html
@@ -69,6 +69,7 @@ if false; then true; # -->
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> Carefully evaluate 'tradeoff-legacy' for specific use cases.</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: tradeoff-harden</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> Carefully evaluate 'tradeoff-harden' for specific use cases.</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CPU_SRSO</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_RETPOLINE</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_PAGE_TABLE_ISOLATION</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_RETHUNK</span>
@@ -76,7 +77,6 @@ if false; then true; # -->
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_CPU_IBPB_ENTRY</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_CPU_IBRS_ENTRY</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_SLS</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_X86_SGX_kVM</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: TDX_GUEST_DRIVER</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_AMD_MEM_ENCRYPT_ACTIVE_BY_DEFAULT</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: virtualization-accessory</span>
@@ -111,8 +111,10 @@ if false; then true; # -->
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: investigation: docker</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: investigation: prog</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: convenience</span>
+<!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: embedded</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: special</span>
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    N: BLK_DEV_WRITE_MOUNTED</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     N: SSB_SDIOHOST_POSSIBLE</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> request: make menuconfig</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> request: make -j $(nproc)</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> request: make deb-pkg -j $(nproc)</span>
